# vplan

./: .ghci  .gitignore  .travis.yml  README.md  TAGS  VPlanChecker.cabal  VPlanUtils.cabal  vplan-utils.cabal  vplan.cabal
src/: .ghci  VPlan.hs  sample.txt
src/Bindings/Manos/: Covers.hs  LPlan.hs  Schedule.hs  VPlan.hs
src/Core/: AtSansFunctor.hs  Builder.hs  Course.hs  CourseSchedule.hs  Debug.hs  Error.hs  FunctionMap.hs  Modifier.hs  Network.hs  PDF.hs  Query.hs  Resource.hs  Schedule.hs  SimpleSchedule.hs  TH.hs  Time.hs  Timespan.hs
src/Core/Modifier/: Annotate.hs  Combine.hs  Combining.hs  Constant.hs  Copy.hs  Empty.hs  Enum.hs  Limit.hs  Parallel.hs  Reference.hs  Sequential.hs
src/Data/: VPlan.hs
src/Data/VPlan/: At.hs  Builder.hs  Class.hs  Combinators.hs  Filter.hs  Print.hs  Schedule.hs  TH.hs  Time.hs  Util.hs
src/Data/VPlan/Modifier/: Annotate.hs  Combine.hs  Constant.hs  Empty.hs  Enum.hs  Limit.hs  Reference.hs  Repeat.hs
src/Playground/: ScheduleTest.hs
src/UI/: CLI.hs
src/UI/Prototype/: Attribute.qml  AttributesModel.qml  DragableItem.qml  Main.qml  Prototype.qml  ScheduleModel.qml  ScheduleView.qml  ScrollBar.qml  Set.qml  Subjects.qml  Table.qml  TableView.qml  qmlprivate.js
src/Utils/: ToText.hs
src/VPlan/: Change.hs  Combinators.hs  Lesson.hs  Plan.hs  Range.hs  Time.hs  Util.hs
src/VPlan/Source/: Manos.hs
tests/: Combinators.hs  Instances.hs  Laws.hs  Main.hs  Modifiers.hs  Properties.hs  Tests.hs
travis/: cabal-apt-install  fast-install-cabal  install-boxes  install-patched  touch-logs  update_ghc
