name:                VPlanChecker
version:             0.1.0.0
synopsis:            Ein Programm zum Abrufen und Auswerten des Vertretungsplans
-- description:         
homepage:            http://bitbucket.org/vplanchecker
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2012 Benno Fünfstück
stability:	     experminetal
tested-with:         GHC ==7.4.2

-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable vplan-cli
  build-depends:     base, mtl, cmdargs, ansi-terminal, MissingH, split, text, hxt, hxt-tagsoup, hxt-http, has, gtk, poppler, glib, directory, lens
  main-is: 	     UI/CLI.hs
  other-modules:     Core.Checker, Bindings.Manos
  hs-source-dirs:    src