name:                VPlanChecker
version:             0.1.0.0
synopsis:            Ein Programm zum Abrufen und Auswerten des Vertretungsplans
-- description:         
homepage:            http://github.com/bennofs/vplan-utils
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2013 Benno Fünfstück
stability:	     experimental
tested-with:         GHC ==7.6.1

-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable vplan-cli
  build-depends:     base, mtl, cmdargs, ansi-terminal, MissingH, split, text, hxt, hxt-tagsoup, hxt-http, has, directory, lens, filepath, network, conduit, http-conduit, MonadCatchIO-transformers, errors, safe, transformers, polyparse, time, system-filepath, containers, dlist, numeric-prelude, bifunctors, semigroupoids, keys
  main-is: 	     UI/CLI.hs
  hs-source-dirs:    src