name:                vplan-utils
version:             0.1.0.0
synopsis:            Ein Programm zum Abrufen und Auswerten des Vertretungsplans
homepage:            http://github.com/bennofs/vplan-utils
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2013 Benno Fünfstück
stability:           experimental
tested-with:         GHC ==7.6.3
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:
      base
    , lens
    , mtl
    , dlist
    , numeric-prelude
--    , semigroupoids
    , template-haskell >= 2.8.0.0
    , bytestring
    , void

  exposed-modules:
      Core.Schedule
    , Core.Builder
    , Core.SimpleSchedule
    , Core.Modifier.Enum
    , Core.Modifier.Reference
    , Core.Modifier.Constant
    , Core.Modifier.Empty
    , Core.Modifier.Limit
    , Core.Modifier.Combine
    , Core.AtSansFunctor

  hs-source-dirs:    src
  ghc-options: -Wall -Werror -fwarn-tabs

test-suite vplan-tests
  type:           exitcode-stdio-1.0
  main-is:        Tests.hs
  hs-source-dirs: tests
  build-depends:
      base
    , transformers
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
    , vplan-utils
    , lens
  ghc-options:   -Wall
