name:                vplan
version:             0.1.0.0
synopsis:            A library for flexible schedules
homepage:            http://github.com/bennofs/vplan
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2013 Benno Fünfstück
stability:           experimental
tested-with:         GHC ==7.6.3
build-type:          Simple
cabal-version:       >=1.8

library

  build-depends:
      base
    , lens > 3.8
    , mtl
    , dlist
    , template-haskell
    , typeable-th
    , void
    , boxes
    , tagged
    , containers
    , profunctors
    , bifunctors
    , syb
    , ghc-prim
    , aeson
    , lens-aeson
    , text
    , groups
    , semigroups

  exposed-modules:
      Data.VPlan
    , Data.VPlan.Schedule
    , Data.VPlan.Builder
    , Data.VPlan.Combinators
    , Data.VPlan.Modifier.Enum
    , Data.VPlan.Modifier.Reference
    , Data.VPlan.Modifier.Constant
    , Data.VPlan.Modifier.Empty
    , Data.VPlan.Modifier.Limit
    , Data.VPlan.Modifier.Combine
    , Data.VPlan.Modifier.Annotate
    , Data.VPlan.Modifier.Repeat
    , Data.VPlan.Print
    , Data.VPlan.Class
    , Data.VPlan.Time
    , Data.VPlan.Util
    , Data.VPlan.At
    , Data.VPlan.TH

  hs-source-dirs:    src
  ghc-options: -Wall -Werror -fwarn-tabs

test-suite vplan-tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: tests
  build-depends:
      base
    , transformers
    , QuickCheck
    , tasty
    , tasty-th
    , nats
    , semigroups
    , bifunctors
    , tasty-quickcheck
    , tagged
    , vplan
    , lens
  ghc-options:   -Wall
