name:                vplan
version:             0.1.0.0
synopsis:            A library for flexible schedules
homepage:            http://github.com/bennofs/vplan
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2013 Benno Fünfstück
stability:           experimental
tested-with:         GHC ==7.6.3
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/bennofs/vplan.git

library

  build-depends:
     base
   , profunctors
   , lens
   , bifunctors
   , contravariant
  exported-modules:
    Data.VPlan
  hs-source-dirs:    src
  ghc-options: -Wall -Werror -fwarn-tabs
  default-language: Haskell2010  
