name:                vplan
version:             0.1.0.0
synopsis:            A library for flexible schedules
homepage:            http://github.com/bennofs/vplan
license:             GPL-3
license-file:        LICENSE
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
copyright:           © 2013 Benno Fünfstück
stability:           experimental
tested-with:         GHC ==7.6.3
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/bennofs/vplan.git

flag lib-Werror
  default: False
  manual: True

library
  build-depends:
     base
   , lens >= 4
   , constraints
   , groups
   , semigroups
   , aeson
   , monoid-extras
   , xml-conduit
   , html-conduit
   , http-client
  exposed-modules:
    VPlan.Plan
    VPlan.Util
    VPlan.Time
    VPlan.Combinators
    VPlan.Lesson
    VPlan.Change
    VPlan
  hs-source-dirs:    src
  if flag(lib-Werror)
    ghc-options: -Werror
  ghc-options: -Wall
  default-language: Haskell2010  

test-suite vplan-tests
  build-depends: 
     base
   , vplan
   , tasty
   , tasty-th
   , tasty-quickcheck
   , QuickCheck
   , lens
   , bytestring
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  ghc-options: -Wall -Werror
  default-language: Haskell2010